@@ -4024,6 +4024,17 @@ function RefreshUtilities()
 					}
 					else {
 						status=item.Counter + ', Today: ' + item.CounterToday;
+						if ((typeof item.Usage != 'undefined') && (typeof item.UsageDeliv == 'undefined')) {
+							bigtext=item.Usage;
+						}
+						else if ((typeof item.Usage != 'undefined') && (typeof item.UsageDeliv != 'undefined')) {
+							if (item.Usage.charAt(0) != 0) {
+								bigtext=item.Usage;
+							}
+							if (item.UsageDeliv.charAt(0) != 0) {
+								bigtext='-' + item.UsageDeliv;
+							}
+						}
 					}
 				}
 				else if ((item.Type == "Current")||(item.Type == "Current/Energy")) {
