@@ -24,6 +24,7 @@ Version 1.0.xxx (August xxth 2013)
 - Implemented: Swedish language support (thanks to the community!)
 - Fixed: 1Wire illegal temperature (exactly 85 degrees)
 - Implemented: 1Wire Voltage support on Utility/Dashboard
+- Fixed: P1 Smart Meter Electra Utility refresh value for meters with return supply
 
 Version 1.0.940 (July 31th 2013)
 - Implemented: Lighting2, when a Group On/Off is received, all switched with the same ID will be set to 'On' or 'Off' (internally)
